Fix readme formatting